--- a/style.css
+++ b/style.css
@@ -143,16 +143,16 @@ footer {
     color: #9e9e9e;
     display: inline-block;
     font-family: Arial, sans-serif;
-    font-size: 16px;
+    font-size: 20px;
     margin: 35px 10px 10px;
-    max-width: 310px;
+    max-width: 510px;
     min-width: 250px;
     position: relative;
     text-align: center;
     width: 100%;
-    background-color: #ffffff;
+    background-color: #dbe9f3;
     border-radius: 5px;
-    border-top: 5px solid #d2652d;
+    border-top: 5px solid #7dd22d;
 }
 
 
